--- a/functions/package.json
+++ b/functions/package.json
@@ -13,11 +13,13 @@
   },
   "main": "index.js",
   "dependencies": {
+    "dom-to-image": "^2.6.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "html-to-image": "^1.3.21",
-    "jsdom": "^16.4.0"
+    "jsdom": "^16.4.0",
+    "puppeteer": "^7.1.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
